--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,14 @@
   padding: 0;
 }
 
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+}
+
 /* Base */
 html {
   font-size: 16px;
